--- a/quotes/package.json
+++ b/quotes/package.json
@@ -11,10 +11,11 @@
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
+        "daisyui": "^4.7.3",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
-        "vite": "^5.0.0",
+        "vite": "^5.1.5",
         "vue": "^3.4.0"
     }
 }
